# admin.rxf-sys.de

./: .gitignore  LICENSE  README.md  app.jsx  dashboard.jsx  data.jsx  drawer.jsx  tokens.css
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: audit.py  auth.py  cache.py  config.py  main.py  models.py  notify.py  storage.py
backend/app/clients/: cloudflare.py  geoip.py  pbs.py  probes.py  proxmox.py  unifi.py
backend/app/routers/: audit.py  backups.py  certs.py  network.py  services.py  system.py  tunnel.py
backend/tests/: conftest.py  test_audit.py  test_cloudflare.py  test_geoip.py  test_notify.py  test_pbs.py  test_proxmox.py  test_storage.py  test_unifi.py
backend/tools/: probe_unifi.py
design/: Dashboard.html  primitives.jsx
frontend/: .eslintrc.json  Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AuditLog.tsx  BackupsCerts.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmModal.tsx  Drawer.tsx  GuestDrawer.tsx  Header.tsx  NetworkPanel.tsx  OverviewCards.tsx  SectionNav.test.tsx  SectionNav.tsx  ServiceGrid.tsx  ShortcutsHelp.tsx  StatusHistory.tsx  Toasts.tsx  VMTable.tsx  primitives.test.ts  primitives.tsx
frontend/src/hooks/: usePoll.test.tsx  usePoll.ts  useSection.test.tsx  useSection.ts  useTheme.ts
frontend/src/styles/: app.css  layout.css
infrastructure/: .env.example  docker-compose.yml  rxf-admin.service  setup-lxc.sh
